@@ -1,4 +1,5 @@
 Changes towards version 0.6:
+- Generic DoPopupWindow() command for status messages of all sorts
 - Update the 'current selection' icon after deleting or inserting ships
   in a fleet in SuperMelee - SvdB
 - Correct some background pixels in melebkgd.{25,26}.png - SvdB
